# ElearningMobileApp

./: .gitignore  README.md
Backend/: .env  .gitignore  API_TESTING_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  main.py  postman_collection.json  pyproject.toml  requirements.txt  run.bat  seed.py  setup_check.py
Backend/app/: config.py  database.py
Backend/app/api/: auth.py  chat.py  courses.py  enrollments.py  files.py  users.py
Backend/app/models/: course.py  course_material_file.py  enrollment.py  user.py
Backend/app/repositories/: course_repository.py  enrollment_repository.py  file_repository.py  user_repository.py
Backend/app/schemas/: chat.py  course.py  enrollment.py  file.py  user.py
Backend/app/services/: file_service.py  vector_store.py
Backend/app/utils/: __init__.py  security.py
Backend/seed_content/: adv_python_decorators.txt  adv_python_generators.txt  db_design_norm.txt  db_design_sql.txt  ds_python_numpy.txt  ds_python_pandas.txt  intro_python_control.txt  intro_python_vars.txt  ml_101_nn.txt  ml_101_regression.txt  web_dev_css.txt  web_dev_html.txt
Documentatie/: document.tex
MobileApp/app/: build.gradle.kts
MobileApp/app/src/main/: AndroidManifest.xml
MobileApp/gradle/: libs.versions.toml
MobileApp/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/androidTest/java/com/elearning/mobileapp/: ExampleInstrumentedTest.kt
app/src/main/java/com/elearning/mobileapp/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
